fixed: overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,15 +125,6 @@
       color 350ms ease,
       background-color 350ms ease;
   }
-
-  html * {
-    transition:
-      color 350ms ease,
-      background-color 350ms ease,
-      border-color 350ms ease,
-      opacity 350ms ease,
-      transform 350ms ease;
-  }
 }
 
 .emoji-picker-container .epr-body::-webkit-scrollbar {
